; ModuleID = '/home/carl/AnghaBench/linux/sound/usb/extr_mixer_scarlett_gen2.c_scarlett2_usb_get_config.c'
source_filename = "/home/carl/AnghaBench/linux/sound/usb/extr_mixer_scarlett_gen2.c_scarlett2_usb_get_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scarlett2_config = type { i32, i32 }
%struct.usb_mixer_interface = type { i32 }

@scarlett2_config_items = common dso_local global %struct.scarlett2_config* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_mixer_interface*, i32, i32, i8*)* @scarlett2_usb_get_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scarlett2_usb_get_config(%struct.usb_mixer_interface* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.usb_mixer_interface*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.scarlett2_config, align 4
  %10 = alloca i32, align 4
  store %struct.usb_mixer_interface* %0, %struct.usb_mixer_interface** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load %struct.scarlett2_config*, %struct.scarlett2_config** @scarlett2_config_items, align 8
  %12 = load i32, i32* %6, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.scarlett2_config, %struct.scarlett2_config* %11, i64 %13
  %15 = bitcast %struct.scarlett2_config* %9 to i8*
  %16 = bitcast %struct.scarlett2_config* %14 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %15, i8* align 4 %16, i64 8, i1 false)
  %17 = getelementptr inbounds %struct.scarlett2_config, %struct.scarlett2_config* %9, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %7, align 4
  %20 = mul nsw i32 %18, %19
  store i32 %20, i32* %10, align 4
  %21 = load %struct.usb_mixer_interface*, %struct.usb_mixer_interface** %5, align 8
  %22 = getelementptr inbounds %struct.scarlett2_config, %struct.scarlett2_config* %9, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @scarlett2_usb_get(%struct.usb_mixer_interface* %21, i32 %23, i8* %24, i32 %25)
  ret i32 %26
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @scarlett2_usb_get(%struct.usb_mixer_interface*, i32, i8*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
